gcc/testsuite/gdc.test/compilable/imports/testlambda2.d
module imports.testlambda2;

int bar() { return 7; }
