gcc/testsuite/gdc.test/fail_compilation/ice10283.d
// 10283

S10283 blah(S10283 xxx) { return xxx; }
S10283 repy = blah(S10283());

struct S10283
{
    string source = 7;
}

